--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "latest"
+    "react-scripts": "latest",
+    "lucide-react": "^0.22.0"
   },
   "scripts": {
     "start": "react-scripts start",
