--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "latest",
-    "lucide-react": "^0.278.0"  <-- Update this to the latest version
+    "lucide-react": "^0.278.0"
   },
   "scripts": {
     "start": "react-scripts start",
