--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "latest",
-    "lucide-react": "^0.278.0"
+    "lucide-react": "^0.278.0",
+     "react": "^18.0.0",
+  "react-dom": "^18.0.0",
+  "react-scripts": "latest",
+  "openai": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -14,4 +18,5 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   }
+  
 }
