--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-api_key="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"
+api_key=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
